# cpp-arcade-games-collection

./: README.md
Asteroids/: .gitignore  CMakeLists.txt
Asteroids/include/: asteroid.h  asteroid_manager.h  game.h  spaceship.h
Asteroids/src/: asteroid.cpp  asteroid_manager.cpp  game.cpp  main.cpp  spaceship.cpp
Breakout/: .gitignore  CMakeLists.txt
Breakout/include/: ball.h  brick.h  button.h  config.h  game.h  level.h  paddle.h
Breakout/src/: ball.cpp  button.cpp  game.cpp  level.cpp  main.cpp  paddle.cpp
Pong/: .gitignore  CMakeLists.txt
Pong/headers/: ball.h  config.h  enemy.h  game.h  player.h
Pong/source/: ball.cpp  enemy.cpp  game.cpp  player.cpp
Snake/: CMakeLists.txt
Snake/include/: apple.h  button.h  config.h  game.h  snake.h
Snake/source/: apple.cpp  button.cpp  game.cpp  snake.cpp
